for db interface
